bug(EJ2-3709): Fabric CSS alignment issue fixed.

--- a/styles/grid/_fabric-definition.scss
+++ b/styles/grid/_fabric-definition.scss
@@ -6,17 +6,17 @@ $grid-headerconent-font-opacity: 1;
 $grid-header-border-color: $neutral-light;
 $grid-header-border-width: 0;
 $grid-headercell-line-height: 36px;
-$grid-header-padding: 1px;
-$grid-header-first-last-cell-padding: 8px;
-$grid-headercelldiv-margin: 0;
-$grid-headercelldiv-right-align-padding: 0 8px 0;
+$grid-header-padding: 8px;
+$grid-header-first-last-cell-padding: 10px;
+$grid-headercelldiv-margin: -8px;
+$grid-headercelldiv-right-align-padding: 0 .6em 0;
 $grid-headercelldiv-padding: 0 8px 0;
 $grid-headercell-both-border-width: 0 0 0 1px;
 $grid-header-font-weight: normal;
 $grid-textbox-animation-color: $neutral-light;
 $grid-filterbarcell-border-width: 1px 0 0;
-$grid-filterbarcell-padding: 0 1px;
-$grid-filterdiv-padding: 2px 8px;
+$grid-filterbarcell-padding: 3px 8px 2px 8px;
+$grid-filterdiv-padding: 0;
 $grid-search-input-font-size: 13px;
 $grid-bigger-search-input-font-size: 14px;
 $gird-bigger-search-input-padding: 6px 0 0;
@@ -148,5 +148,12 @@ $grid-bigger-textwrap-srotnumber-rightalign-margin: 3px 2px 0 10px;
 $grid-bigger-textwrap-sorticon-rightalign-margin: -17px 0;
 $grid-bigger-textwrap-sorticon-margin: -17px 0;
 $grid-device-headercell-padding: 0 8px;
-$grid-device-headercell-fistchild-padding: 0 8px;
+$grid-device-headercell-fistchild-padding: 0 8px 0 10px;
+$grid-device-headercell-lastchild-padding: 0 10px 0 8px;
 $grid-device-groupheadercell-span-line-height: 0 8px;
+$grid-device-rowcell-padding: $grid-content-padding 8px;
+$grid-device-rowcell-firstchild-padding: $grid-content-padding 8px $grid-content-padding 10px;
+$grid-device-rowcell-lastchild-padding: $grid-content-padding 10px $grid-content-padding 8px;
+$grid-device-filterbarcell-padding: 3px 8px 2px 8px;
+$grid-device-filterbarcell-firstchild-padding: 3px 8px 2px 10px;
+$grid-device-filterbarcell-lastchild-padding: 3px 10px 2px 8px;
